fixed betting and improved win condition

--- a/prototype/AppShell.xaml
+++ b/prototype/AppShell.xaml
@@ -9,7 +9,7 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate pages:LoginPage}"
+        ContentTemplate="{DataTemplate pages:GamePage}"
         Route="MainPage" />
 
 </Shell>
